# idle

./: .gitignore  IDLE_CLANS_API_ENDPOINTS.md  README.md  REQUIREMENTS.md  pyproject.toml
.streamlit/: secrets.toml.example
data/game_data_sections/: clanbossinfos.json  clanupgrades.json  exterminatinginfo.json  holidayeventinfodocument.json  houses.json  items.json  minigamedata.json  potiondata.json  quests.json  raidslevelinfos.json  sharedsettings.json  shopitems.json  tasks.json  upgrades.json
idle_clans_tools/: __init__.py  __main__.py  app.py  cli.py
idle_clans_tools/api/: __init__.py  client.py  exceptions.py  models.py  skills.py
idle_clans_tools/ui/: __init__.py  auth.py  errors.py  formatting.py
idle_clans_tools/ui/pages/: __init__.py  clan.py  game_data_browser.py  leaderboards.py  market.py  player.py
tests/: test_client.py
