[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idle-clans-tools"
version = "0.1.0"
description = "A collection of useful tools for the Idle Clans game using the public API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["idle-clans", "gaming", "api", "cli"]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
idle-clans = "idle_clans_tools.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["idle_clans_tools*"]
