[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clanlytics"
version = "0.1.0"
description = "Clanlytics: tools for the Idle Clans game using the public API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["idle-clans", "gaming", "api", "cli", "clanlytics"]
dependencies = [
    "requests>=2.28",
    "streamlit>=1.33",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.6.0",
]

[project.scripts]
clanlytics = "idle_clans_tools.cli:main"
ic = "idle_clans_tools.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["idle_clans_tools", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
include = ["idle_clans_tools*"]
